--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Camo – Cocoa Flavor 3D</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Camo – Cocoa Flavor 3D</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- model-viewer web component -->
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <!-- Google Model Viewer -->
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: #050608;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
-    }
-    .viewer-wrapper {
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: radial-gradient(circle at top, #2a1a10 0%, #050608 55%, #000 100%);
-    }
-    model-viewer {
-      width: min(90vw, 900px);
-      height: min(90vh, 900px);
-    }
-  </style>
-</head>
-<body>
-  <div class="viewer-wrapper">
-    <model-viewer
-      src="./assets/models/cocoa-v1.glb"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      camera-controls
-      autoplay
-      auto-rotate
-      auto-rotate-delay="1000"
-      shadow-intensity="0.6"
-      exposure="1.2"
-      environment-image="neutral"
-      disable-tap
-    ></model-viewer>
-  </div>
-</body>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: #000;
+      }
+
+      .viewer-wrapper {
+        width: 100%;
+        height: 100%;
+      }
+
+      model-viewer {
+        width: 100%;
+        height: 100%;
+        --poster-color: #000000;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="viewer-wrapper">
+      <model-viewer
+        src="assets/models/cacao.glb"
+        alt="Cacao flavor 3D model"
+        camera-controls
+        auto-rotate
+        autoplay
+        exposure="1.1"
+        shadow-intensity="1"
+        environment-image="neutral"
+        disable-zoom="false"
+      >
+      </model-viewer>
+    </div>
+  </body>
 </html>
