--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Camo – Flavor 3D Viewer</title>
+    <title>Camo – Flavor 3D</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Model Viewer -->
     <script
       type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+    </script>
 
     <style>
       html, body {
@@ -36,9 +36,9 @@
   <body>
     <div class="viewer-wrapper">
       <model-viewer
-        id="camo-model"
-        src=""
-        alt="Camo flavor 3D model"
+        id="flavor-viewer"
+        src="https://cdn.shopify.com/3d/models/c3984cd92fb8c51e/cacao.glb"
+        alt="Cacao flavor 3D model"
         camera-controls
         auto-rotate
         autoplay
@@ -46,32 +46,62 @@
         shadow-intensity="1"
         environment-image="neutral"
         disable-zoom="false"
-      >
+        interaction-prompt="none">
       </model-viewer>
     </div>
 
     <script>
-      function getModelFromQuery() {
-        const params = new URLSearchParams(window.location.search);
-        const raw = params.get("model");
+      const viewer = document.getElementById('flavor-viewer');
 
-        // If Shopify sends ?model=<encoded-shopify-url>, decode it
-        if (raw) {
-          try {
-            return decodeURIComponent(raw);
-          } catch (e) {
-            return raw;
+      // FINAL hero pose (front-ish)
+      const endOrbit = {
+        theta: 0,        // 0deg = front
+        phi: 75,         // elevation
+        radius: 2.0      // distance in meters-ish
+      };
+
+      // START pose (behind + farther away, like Sketchfab fly-in)
+      const startOrbit = {
+        theta: 200,      // a bit behind the fruit
+        phi: 80,
+        radius: 4.0
+      };
+
+      function lerp(a, b, t) {
+        return a + (b - a) * t;
+      }
+
+      // Ease-out cubic so it slows down as it lands in place
+      function easeOutCubic(t) {
+        return 1 - Math.pow(1 - t, 3);
+      }
+
+      viewer.addEventListener('load', () => {
+        // Set initial camera position behind the fruit
+        viewer.cameraOrbit = `${startOrbit.theta}deg ${startOrbit.phi}deg ${startOrbit.radius}m`;
+
+        const duration = 2500; // ms
+        const startTime = performance.now();
+
+        function animate(now) {
+          const elapsed = now - startTime;
+          let t = Math.min(elapsed / duration, 1);
+          t = easeOutCubic(t);
+
+          const theta  = lerp(startOrbit.theta, endOrbit.theta, t);
+          const phi    = lerp(startOrbit.phi,   endOrbit.phi,   t);
+          const radius = lerp(startOrbit.radius, endOrbit.radius, t);
+
+          viewer.cameraOrbit = `${theta}deg ${phi}deg ${radius}m`;
+
+          if (t < 1) {
+            requestAnimationFrame(animate);
+          } else {
+            // optional: hand full control back to user, or leave auto-rotate on
           }
         }
 
-        // Fallback to the old local file if no param is given
-        return "assets/models/cacao.glb";
-      }
-
-      window.addEventListener("DOMContentLoaded", () => {
-        const mv = document.getElementById("camo-model");
-        if (!mv) return;
-        mv.src = getModelFromQuery();
+        requestAnimationFrame(animate);
       });
     </script>
   </body>
