--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Camo – Flavor 3D Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Model Viewer -->
+    <!-- Load Google Model Viewer -->
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
@@ -31,90 +31,64 @@
         width: 100%;
         height: 100%;
         --poster-color: #000000;
-        background-color: #000000;
+        background: #000000;
       }
     </style>
   </head>
   <body>
     <div class="viewer-wrapper">
-      <!-- We will set the src from JS based on ?model= in the URL -->
+      <!-- The src will be set by JS based on ?model=... -->
       <model-viewer
-        id="flavor-viewer"
+        id="camo-viewer"
+        src=""
         alt="Flavor 3D model"
         camera-controls
-        autoplay
+        auto-rotate
+        auto-rotate-delay="4000"
+        environment-image="neutral"
         exposure="1.1"
         shadow-intensity="1"
-        environment-image="neutral"
+        interaction-prompt="none"
         disable-zoom="false"
+        camera-orbit="210deg 80deg 140%"
+        camera-target="auto auto auto"
       >
       </model-viewer>
     </div>
 
-    <script>
-      // 1) Get model URL from the query string (?model=...)
+    <script type="module">
+      const viewer = document.querySelector('#camo-viewer');
+
+      // 1) Pick model from ?model=... (Shopify iframe already sends this)
       const params = new URLSearchParams(window.location.search);
-      const modelParam = params.get("model");
+      const modelParam = params.get('model');
 
-      // Fallback model URL if none is provided:
+      // Fallback to cacao if no param is provided
       const defaultModel =
-        "https://cdn.shopify.com/3d/models/c3984cd92fb8c51e/cacao.glb";
+        'https://cdn.shopify.com/3d/models/c3984cd92fb8c51e/cacao.glb';
 
-      const modelUrl = modelParam
-        ? decodeURIComponent(modelParam)
-        : defaultModel;
-
-      const viewer = document.getElementById("flavor-viewer");
+      const modelUrl = modelParam && modelParam.length ? modelParam : defaultModel;
       viewer.src = modelUrl;
 
-      // 2) Animated entrance when the model finishes loading
-      viewer.addEventListener("load", () => {
-        // Disable auto-rotate during the entrance animation
-        viewer.removeAttribute("auto-rotate");
+      // 2) Animated entrance – run once when the model finishes loading
+      viewer.addEventListener('load', () => {
+        // Start with auto-rotate off so entrance is clean
+        viewer.autoRotate = false;
 
-        const duration = 2000; // ms
-        const startTime = performance.now();
+        // Start behind & a bit far
+        viewer.cameraOrbit = '210deg 80deg 140%';
 
-        // Start behind + a bit above, farther away
-        const startTheta = 220; // degrees around model
-        const startPhi = 85; // vertical angle
-        const startRadius = 3.0; // distance in meters
+        // Small delay so the initial orbit applies cleanly
+        setTimeout(() => {
+          // Move toward a nice front angle & closer distance.
+          // model-viewer interpolates between camera-orbit values smoothly.
+          viewer.cameraOrbit = '0deg 75deg 105%';
 
-        // End in front, slightly above, closer in
-        const endTheta = 0;
-        const endPhi = 75;
-        const endRadius = 2.0;
-
-        function easeOutQuad(t) {
-          return t * (2 - t);
-        }
-
-        function animate(now) {
-          let t = (now - startTime) / duration;
-          if (t > 1) t = 1;
-          const e = easeOutQuad(t);
-
-          const theta = startTheta + (endTheta - startTheta) * e;
-          const phi = startPhi + (endPhi - startPhi) * e;
-          const radius = startRadius + (endRadius - startRadius) * e;
-
-          // This controls where the camera is around the model
-          viewer.setAttribute(
-            "camera-orbit",
-            `${theta}deg ${phi}deg ${radius}m`
-          );
-
-          if (t < 1) {
-            requestAnimationFrame(animate);
-          } else {
-            // After entrance finishes, enable a slow auto-rotate
-            viewer.setAttribute("auto-rotate", "");
-            viewer.setAttribute("auto-rotate-delay", "1000");
-          }
-        }
-
-        // Start the animation loop
-        requestAnimationFrame(animate);
+          // After the "move in" finishes, enable slow spin
+          setTimeout(() => {
+            viewer.autoRotate = true;
+          }, 1500); // tweak for how long the entrance lasts
+        }, 60);
       });
     </script>
   </body>
