--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Camo – Flavor 3D Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Load Google Model Viewer -->
+    <!-- Google Model Viewer -->
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
@@ -31,64 +31,101 @@
         width: 100%;
         height: 100%;
         --poster-color: #000000;
-        background: #000000;
       }
     </style>
   </head>
   <body>
     <div class="viewer-wrapper">
-      <!-- The src will be set by JS based on ?model=... -->
       <model-viewer
-        id="camo-viewer"
+        id="flavor-viewer"
         src=""
         alt="Flavor 3D model"
         camera-controls
         auto-rotate
-        auto-rotate-delay="4000"
-        environment-image="neutral"
+        auto-rotate-delay="5000"
         exposure="1.1"
         shadow-intensity="1"
-        interaction-prompt="none"
-        disable-zoom="false"
-        camera-orbit="210deg 80deg 140%"
-        camera-target="auto auto auto"
+        environment-image="neutral"
       >
       </model-viewer>
     </div>
 
-    <script type="module">
-      const viewer = document.querySelector('#camo-viewer');
+    <script>
+      // --- 1. Pick model URL from ?model= (Shopify passes this) ---
 
-      // 1) Pick model from ?model=... (Shopify iframe already sends this)
       const params = new URLSearchParams(window.location.search);
-      const modelParam = params.get('model');
+      const modelFromParam = params.get("model");
 
-      // Fallback to cacao if no param is provided
+      // Your default model if no ?model= is provided:
       const defaultModel =
-        'https://cdn.shopify.com/3d/models/c3984cd92fb8c51e/cacao.glb';
+        "https://cdn.shopify.com/3d/models/c3984cd92fb8c51e/cacao.glb";
 
-      const modelUrl = modelParam && modelParam.length ? modelParam : defaultModel;
+      let modelUrl;
+
+      if (modelFromParam && modelFromParam.trim() !== "") {
+        // If Shopify passes a full URL (https://...)
+        if (modelFromParam.startsWith("http")) {
+          modelUrl = modelFromParam;
+        } else {
+          // If it’s a relative path, make it absolute relative to this page
+          modelUrl = new URL(modelFromParam, window.location.origin).href;
+        }
+      } else {
+        modelUrl = defaultModel;
+      }
+
+      const viewer = document.querySelector("#flavor-viewer");
       viewer.src = modelUrl;
 
-      // 2) Animated entrance – run once when the model finishes loading
-      viewer.addEventListener('load', () => {
-        // Start with auto-rotate off so entrance is clean
-        viewer.autoRotate = false;
+      // --- 2. Sketchfab-style entrance animation ---
 
-        // Start behind & a bit far
-        viewer.cameraOrbit = '210deg 80deg 140%';
+      let entranceDone = false;
 
-        // Small delay so the initial orbit applies cleanly
-        setTimeout(() => {
-          // Move toward a nice front angle & closer distance.
-          // model-viewer interpolates between camera-orbit values smoothly.
-          viewer.cameraOrbit = '0deg 75deg 105%';
+      function runEntranceAnimation() {
+        if (entranceDone) return;
+        entranceDone = true;
 
-          // After the "move in" finishes, enable slow spin
-          setTimeout(() => {
-            viewer.autoRotate = true;
-          }, 1500); // tweak for how long the entrance lasts
-        }, 60);
+        const duration = 2500; // ms
+        const startTime = performance.now();
+
+        // Start: behind + a bit higher + further away
+        const startTheta = 220; // deg around model
+        const endTheta = 0; // front
+
+        const startPhi = 70; // vertical angle (top-down)
+        const endPhi = 60;
+
+        const startRadius = 2.8; // distance from model (meters)
+        const endRadius = 1.6;
+
+        function step(now) {
+          const t = Math.min((now - startTime) / duration, 1);
+
+          // ease in-out cubic
+          const ease =
+            t < 0.5
+              ? 4 * t * t * t
+              : 1 - Math.pow(-2 * t + 2, 3) / 2;
+
+          const theta = startTheta + (endTheta - startTheta) * ease;
+          const phi = startPhi + (endPhi - startPhi) * ease;
+          const radius =
+            startRadius + (endRadius - startRadius) * ease;
+
+          viewer.cameraOrbit = `${theta}deg ${phi}deg ${radius}m`;
+
+          if (t < 1) {
+            requestAnimationFrame(step);
+          }
+        }
+
+        requestAnimationFrame(step);
+      }
+
+      // When the 3D model is ready, kick off the entrance animation
+      viewer.addEventListener("load", () => {
+        // Tiny delay so the model is fully rendered before we start moving
+        setTimeout(runEntranceAnimation, 200);
       });
     </script>
   </body>
