--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow: visible;
         background: #000;
       }
 
